name:                illegal-text-reloc
version:             0.1.0.0
synopsis:            A minimal test case of a bug.
homepage:            http://github.com/schell/illegal-text-reloc
license:             BSD3
license-file:        LICENSE
author:              Schell Scivally
maintainer:          efsubenovex@gmail.com
category:            Testing
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:     Module
  -- Uncomment below to successfully build.
  -- other-modules:       Types
  build-depends:       base >=4.7 && <4.8,
                       bytestring -any
  hs-source-dirs:      src
  default-language:    Haskell2010

